# sibyl-telegram-interface

./: .gitignore  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
src/: requirements.txt  setup.py
src/sibyl_telegram_interface/: __init__.py
src/sibyl_telegram_interface/config/: settings.py
src/sibyl_telegram_interface/handlers/: lambda_handler.py  message_processor.py  queue_msg_example.json  webhook_setup.py
src/sibyl_telegram_interface/services/: bedrock.py  sibyl_core.py  user_service.py
src/sibyl_telegram_interface/telegram/: bot.py  event_example.json  models.py
src/sibyl_telegram_interface/utils/: cfnresponse.py  ssm.py
